SM: Login service with MongoDB Atlas